Firefox will fail css/css-masking/clip-path/clip-path-polygon-010.html after that test gets updated to match the spec
Categories
(Core :: Layout, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox120 | --- | fixed |
People
(Reporter: dholbert, Assigned: boris)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
As of this moment, we're alone in passing this WPT test:
https://wpt.fyi/results/css/css-masking/clip-path/clip-path-polygon-010.html
However, per https://github.com/web-platform-tests/interop/issues/409 , that test doesn't actually match the spec; and progers is likely updating the test to make it match. Hence, I'm preemptively filing this bug.
(Before a spec change 5 years ago, the spec said that the used value of clip-path
's fill-box
keyword was border-box
, for elements with a CSS layout box (i.e. non-SVG conent).
That's what the test currently expects and what we seem to implement. However, as of that spec change, the used value is now supposed to be content-box
.)
It looks like this is at least one of the spots that we need to update:
https://searchfox.org/mozilla-central/rev/c1fb133ca4901985070e519c92322b432fa254c5/layout/base/nsLayoutUtils.cpp#9641-9642,9655
Possibly other nearby usages of that StyleGeometryBox::FillBox
enum as well.
Reporter | ||
Comment 1•2 years ago
|
||
Similar change is coming for another test:
https://github.com/web-platform-tests/interop/issues/410
wpt.fyi: https://wpt.fyi/results/css/css-masking/clip-path/clip-path-fillBox-1a.html
Same situation as in comment 0; and the same internal fix on our end should be sufficient to get us back to passing, once the test has been changed.
Reporter | ||
Updated•2 years ago
|
Reporter | ||
Comment 2•2 years ago
|
||
boris, could you take this masking fix when you've got cycles?
Reporter | ||
Comment 3•2 years ago
•
|
||
(The tests were updated and wpt.fyi is showing us as failing these tests now.)
Assignee | ||
Comment 4•2 years ago
|
||
Sure. I will take a look at this. This should be easy to fix.
Assignee | ||
Comment 5•2 years ago
|
||
It seems mask-origin/mask-clip/clip-path use different mapping for
geometry-box. We should specialize each one.
Assignee | ||
Comment 6•2 years ago
|
||
Also, make sure mask-origin/mask-clip follow the spec.
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 9•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/46bb8c25b946
https://hg.mozilla.org/mozilla-central/rev/865e00dab584
Description
•