Bug 1852323 - Part 1: Update the mapping of geometry box for clip-path. r=emilio

It seems mask-origin/mask-clip/clip-path use different mapping for
geometry-box. We should specialize each one. In this patch, we focus on
clip-path.

Differential Revision: https://phabricator.services.mozilla.com/D188146